--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/community?serverTimezone=UTC&useSSL=false
     username: root
-    password: sang0616
+    password: root0616
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -16,3 +16,10 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+
+# File Storage Settings
+file:
+  # 파일이 실제로 저장될 로컬 시스템 경로
+  upload-dir: ./uploads/images/
+  # 클라이언트가 이미지에 접근할 때 사용할 서버 기본 URL
+  base-url: http://localhost:8080
