--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       ddl-auto: none   # 개발 중에는 create / create-drop / update 중 선택
     properties:
       hibernate:
-        format_sql: true
+        #        format_sql: true # 보기 좋은 형식으로 출력
         use_sql_comments: true
 
 logging:
