--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: root
     password: root0616
     driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: jwt
 
   jpa:
     hibernate:
