--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     // docs
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // swagger
     implementation 'org.springframework.boot:spring-boot-starter-validation' // @Valid
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 }
 
 tasks.named('test') {
