feat: JwtManager 구현
- Refresh token는 초기 모델에서 서버에서 메모리로 관리될 예정이므로 단순 UUID로 구현했습니다. 이후 Redis나 DB로 저장소를 옮길 에정입니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,8 @@ file:
   upload-dir: ./uploads/images/
   # 클라이언트가 이미지에 접근할 때 사용할 서버 기본 URL
   base-url: http://localhost:8080
+
+jwt:
+  secret: "jaesangYSecretKeyjaesangYInProduction64BytesjaesangY"
+  access-token-expiration-ms: 1800000  # 30분
+  refresh-token-expiration-ms: 2592000000 # 30일
