--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
         #        format_sql: true # 보기 좋은 형식으로 출력
         use_sql_comments: true
 
+server:
+  servlet:
+    context-path: /api
+
 logging:
   level:
     org.hibernate.SQL: debug
