refactor: 허용 리소스를 .yml 파일에서 가져오기 위해 변경
- PermitAllProperties에서 setter를 사용하지 않기 위해서는 생성자 방식을 사용해야 합니다.
- 하지만 빈으로 등록하는 과정에서 ConfigurationProperties와 충돌이 일어나기 때문에 같이 사용할 수 없습니다.
- 때문에 어노테이션 방식으로 빈으로 등록하는 것은 할 수 없고, main 함수를 갖는 가장 상단 클래스에서 이를 등록 가능합니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,15 @@ server:
   servlet:
     context-path: /api
 
+security:
+  permit-all-paths:
+    paths:
+      POST:
+        - /api/auth
+        - /api/users
+      GET:
+        - /**
+
 logging:
   level:
     org.hibernate.SQL: debug
