--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/community?serverTimezone=UTC&useSSL=false
+    #    url: jdbc:mysql://db:3306/community_db?serverTimezone=Asia/Seoul&useSSL=false
     username: root
     password: root0616
     driver-class-name: com.mysql.cj.jdbc.Driver
