--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,13 @@
-version: '3.8'
-
-# 서비스 정의(컨테이너)
+# community-backend/docker-compose.yml
 services:
-  # Express.js 백엔드 서비스
-  express-app:
-    build: ./express
-    image: jayoon7/docker-test-app:latest
-    container_name: express-app
-    networks:
-      - express-proxy-net
-    restart: always # 컨테이너 종료 시 항상 재시작
-
-  # Nginx 리버스 프록시 서비스
-  nginx-app:
-    image: nginx:stable-alpine
-    container_name: nginx-app
+  be-app:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    container_name: be-app
     ports:
-      - "80:80"
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod,jwt
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf # 파일 변경 및 볼륨 마운트
-    networks:
-      - express-proxy-net
-    restart: always
-
-# Docker 네트워크 정의
-networks:
-  express-proxy-net:
-    driver: bridge
+      - ./logs:/app/logs
