--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,10 @@ jwt:
   secret: "jaesangYSecretKeyjaesangYInProduction64BytesjaesangY"
   access-token-expiration-ms: 1800000  # 30분
   refresh-token-expiration-ms: 2592000000 # 30일
+
+# File Storage Settings
+file:
+  # 파일이 실제로 저장될 로컬 시스템 경로
+  upload-dir: ./uploads/images/
+  # 클라이언트가 이미지에 접근할 때 사용할 서버 기본 URL
+  base-url: http://localhost:8080
