--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,7 @@ jobs:
         run: ./gradlew test
 
   build-and-push-image:
+    needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
