chore: 허용 API method 추가
- 메서드를 명시해야지만 사용할 수 있기 때문에 기본적인 /api만 허용해뒀습니다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,8 +21,13 @@ security:
         - /api/auth
         - /api/users
       GET:
-        - /**
-#        health
+        - /api/health
+      PUT:
+        - /api
+      PATCH:
+        - /api
+      DELETE:
+        - /api
 
 logging:
   level:
