feat: 게시글 상세 조회 구현 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,8 @@ security:
         - /api/users
       GET:
         - /api/health
+        - /api/posts/*
+        - /api/comments
       PUT:
         - /api
       PATCH:
