feat: 댓글 목록 조회 구현 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,8 +22,8 @@ security:
         - /api/users
       GET:
         - /api/health
-        - /api/posts/*
-        - /api/comments
+        - /api/posts/**
+        - /api/posts
       PUT:
         - /api
       PATCH:
